fixes #333
