# src/app/Balloon.App.Api/openapi.yml
@@ -2668,6 +2668,10 @@ components:
             hash:
               description: MD5 content checksum.
               type: string
+            preview:
+              description: Is true if there is a preview
+              type: boolean
+              default: false
     FileHistory:
       description: File history.
       type: object
