# src/app/Balloon.App.Preview/Constructor/Http.php
@@ -13,6 +13,8 @@ namespace Balloon\App\Preview\Constructor;
 
 use Balloon\App\Preview\Api\v1;
 use Balloon\App\Preview\Api\v2;
+use Balloon\Filesystem\Node\AttributeDecorator;
+use Balloon\Filesystem\Node\Collection;
 use Micro\Http\Router;
 use Micro\Http\Router\Route;
 
@@ -21,12 +23,26 @@ class Http
     /**
      * Constructor.
      */
-    public function __construct(Router $router)
+    public function __construct(Router $router, AttributeDecorator $decorator)
     {
         $router
             ->prependRoute(new Route('/api/v1/file/preview(/|\z)', v1\Preview::class))
             ->prependRoute(new Route('/api/v1/file/{id:#([0-9a-z]{24})#}/preview(/|\z)', v1\Preview::class))
             ->prependRoute(new Route('/api/v2/files/preview(/|\z)', v2\Preview::class))
             ->prependRoute(new Route('/api/v2/files/{id:#([0-9a-z]{24})#}/preview(/|\z)', v2\Preview::class));
+
+        $decorator->addDecorator('preview', function ($node) {
+            if ($node instanceof Collection) {
+                return null;
+            }
+
+            $preview = $node->getAppAttribute('Balloon\\App\\Preview', 'preview');
+
+            if ($preview !== null) {
+                return true;
+            }
+
+            return false;
+        });
     }
 }
